[metadata]
name = sqlfluff-templater-dbt-jinja
version = 0.1.0
description = Lint your dbt project SQL
long_description = file: README.md
long_description_content_type = text/markdown
author = Dave
author_email = dave@dbtlabs.com

classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: POSIX
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities
    Topic :: Software Development :: Quality Assurance
keywords =
    sqlfluff
    sql
    linter
    formatter
    bigquery
    clickhouse
    databricks
    db2
    duckdb
    exasol
    greenplum
    hive
    materialize
    mysql
    postgres
    redshift
    snowflake
    soql
    sparksql
    sqlite
    teradata
    tsql
    dbt

[options]
packages = find:
python_requires = >=3.7
install_requires =
    sqlfluff==2.3.5
    jinja2-simple-tags>=0.3.1
    markupsafe
    pydantic
    rich
    ruamel.yaml

[options.entry_points]
sqlfluff =
    sqlfluff_templater_dbt_jinja = sqlfluff_templater_dbt_jinja
